--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".SeeDiscriptionAndJoinVote"></activity>
+        <activity android:name=".SeeDiscriptionAndJoinVote" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
