회원가입 Activity를 추가하여 앱 전체 Activity Architecture를 수정.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,10 @@
         </activity>
         <activity android:name=".SplashActivity" android:theme="@android:style/Theme.NoTitleBar">
         </activity>
+        <activity android:name=".CreateAccountActivity"
+            android:label="CreateAccount"
+            >
+        </activity>
     </application>
 
 </manifest>
