1. 투표 참여 확인했습니다. 성공
2. 단지 수정 사항은 email, vote_id, candidate를 제가 임의로 넣었습니다. 테스트 용의성을 위해서. 앱에서 직접 입력한 값을 이용하도록 해야합니다.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,9 +17,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
+        <activity android:name=".joinVoteActivity"></activity>
         <activity
             android:name=".LoginActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -37,12 +38,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SplashActivity" android:theme="@android:style/Theme.NoTitleBar">
-        </activity>
-        <activity android:name=".CreateAccountActivity"
-            android:label="CreateAccount"
-            >
-        </activity>
+        <activity
+            android:name=".SplashActivity"
+            android:theme="@android:style/Theme.NoTitleBar"></activity>
+        <activity
+            android:name=".CreateAccountActivity"
+            android:label="CreateAccount"></activity>
     </application>
 
 </manifest>
