투표코드를 입력하여 종료된 투표이면 결과조회하는 기능 draft 구현 완료. (추가파일: SeeVoteActivity, activity_see_vote.xml, Candidate, CandidateAdapter, candidate_item.xml)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,14 @@
         <activity
             android:name=".CreateAccountActivity"
             android:label="CreateAccount"></activity>
+        <activity
+            android:name=".SeeVoteActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
